src/objects/Member_Policy__c.object
<CustomObject>
    <description>Provides information about the family’s health insurance policies.</description>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <defaultValue>&quot;Manual&quot;</defaultValue>
        <description>how policy was entered</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entry Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;S</fullName>
                </value>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
                <value>
                    <fullName>- Please select -</fullName>
                    <isActive>false</isActive>
                    <label>- Please select -</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Information__c</fullName>
        <label>Member Information</label>
        <referenceTo>Member_Information__c</referenceTo>
        <relationshipLabel>Member Policies</relationshipLabel>
        <relationshipName>Member_Policies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outside_UHG_Policy__c</fullName>
        <label>Outside UHG Policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>- Please select -</fullName>
                    <isActive>false</isActive>
                    <label>- Please select -</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Name_Link__c</fullName>
        <description>Creates new  link for Member Policy object</description>
        <formula>HYPERLINK( &quot;/lightning/r/Member_Policy__c/&quot;+Id +&quot;/view&quot; ,   Policy_Name__c   , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Status__c</fullName>
        <label>Policy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>- Please Select -</fullName>
                    <isActive>false</isActive>
                    <label>- Please Select -</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the policy is the primary policy for the family.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_as_Main_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set as Main Policy</label>
        <type>Checkbox</type>
    </fields>
    <label>Member Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Member Policies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>